# cartola_analytics

./: .gitignore  Backtest.py  BaseFetcher.py  FBrefFetcher.py  FotmobFetcher.py  Indicators.py  LineupOptimizer.py  Makefile  Metrics.py  PlayerIndicators.py  PlayerMetrics.py  README.md  ResilientFetcher.py  SofascoreFetcher.py  TeamNameMapper.py  atletas.json  configurate.sh  main.py  pyproject.toml  rodada.json  test.js  test.py
.claude/commands/: cartola-analyst.md
cartola_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: CARTOLA_SCOUTS.md  INDICATORS_AND_METRICS.md
